outputs/main/hsevo_bpp_online_2025-08-07_18-44-47/problem_iter20_response2.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 13
    base = 1.0 / (remaining[feasible) + eps])
                                    ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 13
    base = 1.0 / (remaining[feasible) + eps])
                                    ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 13
    base = 1.0 / (remaining[feasible) + eps])
                                    ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
